--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
 
       <div class="container">
-          <img src="assets/images/logo.jpg"/>
+          <img ng-src="assets/images/logo.jpg"/>
       </div>
       
       <div ui-view></div>
