finishing delegation for assignment

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,12 @@
             <center>
                 Copyright 2015  
             </center>
+            <center>
+                Administrator Contact
+                - Email  : b.widiatnolo@umn.ac.id <br/>
+                - Phone  : ext.2600 <br/>
+                - Mobile : 085643355436 <br/>
+            </center>
         </div>
       
   </div>
